bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.3")

_SYSROOT_BUILD_FILE = """
filegroup(
    name = "{sysroot_name}",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bullseye_amd64",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/ec989b96c5f1e235182e5f2a5c9d23b3eb4101e0/debian_bullseye_amd64_sysroot.tar.xz"],
    sha256 = "498e9b509fd190360ddec6111badb44f9390e00840b5b7c8f640bc2f95f1ddb1",
    build_file_content = _SYSROOT_BUILD_FILE.format(sysroot_name = "bullseye_amd64"),
)

bazel_dep(name = "toolchains_llvm", version = "1.5.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

llvm.toolchain(
    llvm_version = "20.1.1",
)

llvm.sysroot(
    label = "@bullseye_amd64",
    targets = ["linux-x86_64"],
)

llvm.sysroot(
    label = "@//third_party/cpp/empty",
    targets = ["wasm32"],
)

use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")
